--- a/backend/costing_tool/pom.xml
+++ b/backend/costing_tool/pom.xml
@@ -49,6 +49,15 @@
 	</dependencies>
 
 	<build>
+		<extensions>
+			<!-- Enabling the use of SSH -->
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh-external</artifactId>
+				<version>3.5.1</version>
+			</extension>
+		</extensions>
+
 		<plugins>
 			<plugin>
 				<groupId>org.asciidoctor</groupId>
