--- a/backend/costing_tool/src/main/resources/application.properties
+++ b/backend/costing_tool/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/warp
+spring.datasource.username=remote
+spring.datasource.password=remote
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
