--- a/backend/costing_tool/src/main/resources/application.properties
+++ b/backend/costing_tool/src/main/resources/application.properties
@@ -3,4 +3,8 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/warp
 spring.datasource.username=remote
 spring.datasource.password=remote
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+# Show SQL statements
+spring.jpa.show-sql: true
+
+# Base path for API queries
+server.servlet.context-path=/api
