--- a/backend/costing_tool/src/main/resources/application.properties
+++ b/backend/costing_tool/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.show-sql: true
 
 # Base path for API queries
 server.servlet.context-path=/api
+
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
