--- a/backend/costing_tool/src/main/resources/application.properties
+++ b/backend/costing_tool/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.show-sql: true
 server.servlet.context-path=/api
 
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+server.port=8080
