Moved from ModelMapper to MapStruct.

--- a/backend/costing_tool/pom.xml
+++ b/backend/costing_tool/pom.xml
@@ -52,13 +52,6 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.modelmapper</groupId>
-			<artifactId>modelmapper</artifactId>
-			<version>3.0.0</version>
-		</dependency>
-		<!--
-	-->
-		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
 			<version>${org.mapstruct.version}</version>
@@ -141,6 +134,9 @@
 					<compilerArgs>
 						<arg>
 							-Amapstruct.defaultComponentModel=spring
+						</arg>
+						<arg>
+							-Amapstruct.verbose=true
 						</arg>
 					</compilerArgs>
 				</configuration>
