--- a/backend/costing_tool/src/main/resources/application.properties
+++ b/backend/costing_tool/src/main/resources/application.properties
@@ -3,8 +3,13 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/warp
 spring.datasource.username=remote
 spring.datasource.password=remote
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 # Show SQL statements
-spring.jpa.show-sql: true
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# logging.level.org.hibernate.type=TRACE
 
 # Base path for API queries
 server.servlet.context-path=/api
