--- a/backend/costing_tool/src/main/resources/application.properties
+++ b/backend/costing_tool/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.username=remote
 spring.datasource.password=remote
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
 # Show SQL statements
 # spring.jpa.show-sql=true
 # spring.jpa.properties.hibernate.format_sql=true
