--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "html2pdf.js": "^0.10.1",
+    "pdfkit": "^0.13.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
